apps/nextjs/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextjs-deployment
  namespace: nextjs 
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nextjs
  template:
    metadata:
      labels:
        app: nextjs
    spec:
      imagePullSecrets:
        - name: vpittamp-acr-dockercfg   # secret produced by ESO
      containers:
      - name: nextjs
        image: vpittamp.azurecr.io/chat-frontend:0.1.9
