apps/nextjs/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextjs-service
  namespace: nextjs 
spec:
  type: ClusterIP
  selector:
    app: nextjs
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
